--- a/resume/web/styles/app.css
+++ b/resume/web/styles/app.css
@@ -11,6 +11,11 @@ body {
   }
 }
 
+ul li {
+  padding: .2em;
+  list-style: none;
+}
+
 h1,
 h2,
 h3,
@@ -24,7 +29,7 @@ h6 {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 6em;
   line-height: 5.5rem;
 }
 
@@ -148,6 +153,7 @@ section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
   max-width: 75rem;
+  padding-left: 3em;
 }
 
 section.resume-section .resume-item .resume-date {
