--- a/zen/web/src/styles.css
+++ b/zen/web/src/styles.css
@@ -23,7 +23,7 @@ html, body {
 
 @keyframes fadeToBlack {
   0% {
-    background-color: white;
+    background-color: inherit;
   }
   100% {
     background-color: black;
@@ -81,4 +81,21 @@ html, body {
   transform: translate(-50%, -50%);
   text-align: center;
   color: white;
+}
+
+
+
+.fade-enter {
+  opacity: 0.01;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 1000ms ease-in;
 }
